# server-skeleton/api/page/dto/request/request_page_dto.go
@@ -1,5 +1,0 @@
-package request
-
-type RequestPageDTO struct {
-	Name string `form:"name" example:"Some Page"`
-}
