# server-skeleton/api/page/dto/result/page_list_result_dto.go
@@ -1,5 +1,0 @@
-package result
-
-type PageListResultDto struct {
-	list []PageItemResultDto
-}
