# server-skeleton/api/page/model.go
@@ -1,0 +1,22 @@
+package page
+
+import (
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+	"time"
+)
+
+type Page struct {
+	ID        uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4()"`
+	Name      string    `gorm:"type:varchar(100);not null"`
+	CreatedAt time.Time `gorm:"type:timestamp;not null"`
+	UpdatedAt time.Time `gorm:"type:timestamp;not null"`
+	DeletedAt time.Time `gorm:"type:timestamp;not null"`
+}
+
+func (p *Page) BeforeCreate(tx *gorm.DB) (err error) {
+	if p.ID == uuid.Nil {
+		p.ID = uuid.New()
+	}
+	return
+}
