# server-skeleton/docs/swagger.yaml
@@ -1,17 +1,35 @@
 definitions:
-  request.RequestPageDTO:
+  page.PageItemResultDto:
     properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: string
       name:
-        example: Some Page
+        type: string
+      updated_at:
         type: string
     type: object
-  result.PageItemResultDto:
+  page.RequestPageDTO:
     properties:
-      id:
-        example: 2a4ced49-0f43-496e-b823-5af77407fd2c
+      created_at:
+        example: "2022-01-01T00:00:00Z"
+        type: string
+      deleted_at:
+        example: "2022-01-01T00:00:00Z"
         type: string
       name:
         example: Some Page
+        type: string
+      updated_at:
+        example: "2022-01-01T00:00:00Z"
+        type: string
+    type: object
+  page.SuccessResponseDto:
+    properties:
+      message:
         type: string
     type: object
 info:
@@ -30,6 +48,25 @@ paths:
           type: string
         name: names
         type: array
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: cursor (las id uuid)
+        in: query
+        name: cursor
+        type: string
+      - description: lastTimestamp
+        in: query
+        name: lastTimestamp
+        type: string
+      - collectionFormat: csv
+        description: 'Filter created_at Like min-max (пример: 2024-01-01_2024-12-31)'
+        in: query
+        items:
+          type: string
+        name: orders[created_at]
+        type: array
       produces:
       - application/json
       responses:
@@ -37,7 +74,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/request.RequestPageDTO'
+              $ref: '#/definitions/page.RequestPageDTO'
             type: array
       tags:
       - pages
@@ -51,14 +88,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/request.RequestPageDTO'
+          $ref: '#/definitions/page.RequestPageDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/result.PageItemResultDto'
+            $ref: '#/definitions/page.SuccessResponseDto'
         "400":
           description: Bad Request
           schema:
@@ -73,6 +110,27 @@ paths:
       tags:
       - pages
   /page/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deleting page by id
+      parameters:
+      - description: Page id (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/page.RequestPageDTO'
+            type: array
+      tags:
+      - page
     get:
       consumes:
       - application/json
@@ -90,7 +148,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/request.RequestPageDTO'
+              $ref: '#/definitions/page.RequestPageDTO'
             type: array
       tags:
       - page
@@ -99,19 +157,24 @@ paths:
       - application/json
       description: Update only sent fields
       parameters:
+      - description: Page id (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
       - description: Updated data
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/request.RequestPageDTO'
+          $ref: '#/definitions/page.RequestPageDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/result.PageItemResultDto'
+            $ref: '#/definitions/page.PageItemResultDto'
         "400":
           description: Bad Request
           schema:
@@ -130,19 +193,24 @@ paths:
       - application/json
       description: Update all sent fields
       parameters:
+      - description: Page id (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
       - description: Updated data
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/request.RequestPageDTO'
+          $ref: '#/definitions/page.RequestPageDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/result.PageItemResultDto'
+            $ref: '#/definitions/page.SuccessResponseDto'
         "400":
           description: Bad Request
           schema:
@@ -153,7 +221,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Patch page
+      summary: Put page
       tags:
       - page
 swagger: "2.0"
